# fastapi_tutorial

./: .env.development  .flake8  .isort.cfg  Dockerfile  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  tmp_main.py
.github/workflows/: test.yaml
api/: db.py  main.py  migrate_db.py
api/core/: celery.py  token.py  user.py
api/cruds/: done.py  task.py
api/db/: db.py  migrate_db.py
api/models/: task.py  user.py
api/routers/: calc.py  done.py  item.py  task.py  token.py  user.py
api/schemas/: calc.py  done.py  task.py  user.py
docker/api/: Dockerfile
docker/db/: Dockerfile
docker/worker/: Dockerfile
scripts/: run.sh
tests/: test_main.py
