[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["w40141 <w.40141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
SQLAlchemy = "^1.4.29"
aiomysql = "^0.0.22"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest-asyncio = "^0.17.2"
aiosqlite = "^0.17.0"
httpx = "^0.21.3"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.black]
target-version = ['py39']
line-length = 120

[tool.flake8]
max-line-length = 120
max-complexity = 10
ignore = "E203,E501,W503,W504"
select = "B,C,E,F,W,T4,B9"
exclude = "tests/*"

[tool.mypy]
python_version = "^3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
