[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = ""
authors = ["w40141 <w.40141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
SQLAlchemy = "^1.4.29"
aiomysql = "^0.0.22"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
flower = "^1.2.0"
celery = {version = "^5.2.7", extras = ["redis"]}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.0.1"
black = "^23.1.0"
pytest-asyncio = "^0.17.2"
aiosqlite = "^0.17.0"
httpx = "^0.21.3"
mypy = "^0.931"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.black]
target-version = ['py310']
line-length = 80

[tool.flake8]
max-line-length = 80
max-complexity = 10
ignore = "E203,E501,W503,W504"
select = "B,C,E,F,W,T4,B9"
exclude = "tests/*"

[tool.mypy]
python_version = "^3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
